<resources>
  <!--region General-->
  <string name="app_name">Earworm</string>
  <string name="no_entries">You haven\'t made any entries yet. To add a new entry, click the button in the bottom
    right
  </string>
  <string name="no_filtered_results">No results found that match that filter</string>
  <string name="empty">Please ensure all fields are filled before saving</string>
  <string name="empty_search">Please enter something to search for</string>
  <string name="today">Today</string>
  <string name="long_click_hint">Hold to edit or delete</string>
  <string name="dont_show">Don\'t Show Again</string>
  <string name="search">Search</string>
  <string name="filter">Filter</string>
  <string name="between">Between</string>
  <string name="include">Include</string>
  <string name="start_date">Start Date</string>
  <string name="end_date">End Date</string>
  <string name="end">End</string>
  <string name="start">Start</string>
  <string name="error">An Error Occurred</string>
  <string name="back">Back</string>
  <string name="add">Add</string>
  <string name="add_shortcut">Add Item</string>
  <string name="shortcut_disabled">Shortcut Disabled</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="title">Title</string>
  <string name="content">Content</string>
  <!--endregion-->

  <!--region Favourite Items-->
  <string name="song_name">Song name</string>
  <string name="song">Song</string>
  <string name="album">Album</string>
  <string name="artist">Artist</string>
  <string name="genre">Genre</string>
  <string name="date">Date</string>
  <!--endregion-->

  <!--region Data Modification-->
  <string name="item_added">Item Added</string>
  <string name="item_deleted">Item Deleted</string>
  <string name="save">Save</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="edit_or_delete">Edit or Delete Item</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="confirm_image_deletion_title">Delete Image?</string>
  <string name="confirm_image_deletion_message">Are you sure you want to delete this image?</string>
  <string name="add_an_image">Add an Image</string>
  <string name="choose_an_image">Choose an Image</string>
  <!--endregion-->

  <!--region Settings-->
  <string name="settings">Settings</string>
  <string name="appearance">Appearance</string>
  <string name="theme_pref_title">Dark Theme</string>
  <string name="behaviour">Behaviour</string>
  <string name="reset_tips">Reset Tips</string>
  <string name="clear_inputs_on_type_change">Clear Inputs on Type Change</string>
  <string name="reset_tips_confirmation">Tips have been reset</string>
  <string name="app_info">App Info</string>
  <string name="version">Version</string>
  <string name="build_code">Build Code</string>
  <string name="licenses">Licenses</string>
  <string name="privacy">Privacy</string>
  <string name="privacy_content">All user data is stored on device. At no point does this app send any user data off device.</string>
  <string name="view_source_code">View Source Code</string>
  <string name="author">Author</string>
  <string name="marc_donald">Marc Donald</string>
  <string name="backup_and_restore">Backup and Restore</string>
  <string name="backup">Backup</string>
  <string name="restore">Restore</string>
  <string name="restore_title">Select a file to restore from</string>
  <string name="backup_file">Backup</string>
  <string name="backing_up">Backing Up</string>
  <string name="share">Share</string>
  <string name="dismiss">Dismiss</string>
  <string name="backup_success">Backup Successful</string>
  <string name="restore_confirm_title">Restore from Backup?</string>
  <string name="restore_confirm_message">Are you sure you want to restore from a backup? \nThis will replace all current data</string>
  <string name="restore_confirm">Continue with Restore</string>
  <string name="restoring">Restoring</string>
  <string name="restore_error_title">An Error Occurred</string>
  <string name="restore_error_message">Ensure you are restoring from a valid .earworm file</string>
  <string name="check_for_update">Check for Updates</string>
  <string name="no_update_title">No Updates Found</string>
  <string name="no_update_message">You are running the latest version</string>
  <string name="new_version_available_title">Update Available</string>
  <string name="new_version_available_message">A newer version (%1$s) is available for download</string>
  <string name="download">Download</string>
  <string name="checking_for_updates">Checking for Updates</string>
  <string name="no_connection_warning">No Connection</string>
  <!--endregion-->

  <!--region OSS-->
  <string name="license">License</string>
  <string name="description">Description</string>
  <string name="apache_2">Apache 2</string>
  <string name="mit">MIT</string>
  <string name="glide_license">BSD, part MIT and Apache 2.0. See the LICENSE file for details</string>

  <string name="glide">Glide</string>
  <string name="glide_description">Used for displaying images</string>

  <string name="timber">Timber</string>
  <string name="timber_description">Used for logging</string>

  <string name="material_design_icons">Material Design Icons</string>
  <string name="material_icons_description">Used throughout the application</string>

  <string name="material_design_components">Material Components for Android</string>
  <string name="material_design_components_description">Used throughout the application</string>

  <string name="android_file_picker">Android File picker</string>
  <string name="android_file_picker_description">Used for selecting images</string>

  <string name="kodein">Kodein</string>
  <string name="kodein_description">Used for dependency injection</string>

  <string name="open_sans">Open Sans</string>
  <string name="open_sans_description">Used throughout the application</string>

  <string name="retrofit">Retrofit</string>
  <string name="retrofit_description">Used for API calls to Github for version checking</string>

  <string name="gson">GSon</string>
  <string name="gson_description">Used for converting Github API responses into Kotlin objects</string>
  <!--endregion-->
</resources>
