<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/txt_restore_title"
    android:text="@string/restore_confirm_title"
    android:textAppearance="@style/TextAppearance.Earworm.DialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="@dimen/marginStandard" />

  <TextView
    android:id="@+id/txt_restore_message"
    android:text="@string/restore_confirm_message"
    android:textAppearance="@style/TextAppearance.Earworm.DialogContent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/lin_restore_img"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="@dimen/marginStandard" />

  <LinearLayout
    android:id="@+id/lin_restore_img"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/txt_restore_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ProgressBar
      android:id="@+id/prog_restore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/marginStandard" />

    <ImageView
      android:id="@+id/img_restore_fail"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:padding="@dimen/marginStandard"
      android:contentDescription="@string/restore_error_title"
      android:src="@drawable/ic_error_24px" />
  </LinearLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_restore_cancel"
    style="@style/Widget.Earworm.Button.Borderless"
    android:text="@string/cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/txt_restore_message"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="@dimen/marginStandard"
    android:layout_marginEnd="@dimen/marginStandard"
    android:layout_marginBottom="@dimen/marginStandard" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_restore_dismiss"
    style="@style/Widget.Earworm.Button.Borderless"
    android:text="@string/dismiss"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/txt_restore_message"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="@dimen/marginStandard"
    android:layout_marginEnd="@dimen/marginStandard"
    android:layout_marginBottom="@dimen/marginStandard" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_restore_confirm"
    style="@style/Widget.Earworm.Button.Negative"
    android:text="@string/restore_confirm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/txt_restore_message"
    app:layout_constraintEnd_toStartOf="@id/btn_restore_cancel"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="@dimen/marginStandard"
    android:layout_marginEnd="@dimen/marginStandard" />

</androidx.constraintlayout.widget.ConstraintLayout>