<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/txt_binary_dialog_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:text="@string/title"
    android:textAlignment="center"
    style="@style/Earworm.TextAppearance.AlertDialogTitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/txt_binary_dialog_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:text="@string/content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txt_binary_dialog_title" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_binary_dialog_negative"
    android:layout_width="wrap_content"
    android:backgroundTint="@color/negative"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:layout_marginBottom="@dimen/marginStandard"
    android:text="@string/no"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txt_binary_dialog_message" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_binary_dialog_positive"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:text="@string/yes"
    style="@style/PositiveButton"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txt_binary_dialog_message" />
</androidx.constraintlayout.widget.ConstraintLayout>