<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Marc Donald
  ~
  ~ The MIT License (MIT)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of
  ~ this software and associated documentation files (the "Software"), to deal in
  ~ the Software without restriction, including without limitation the rights to
  ~ use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
  ~ the Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  ~ FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  ~ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <TextView
    android:id="@+id/txt_update_title"
    android:text="@string/checking_for_updates"
    android:textAppearance="@style/TextAppearance.Earworm.DialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="@dimen/marginStandard" />

  <TextView
    android:id="@+id/txt_update_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/marginStandard"
    android:textAppearance="@style/TextAppearance.Earworm.DialogContent"
    app:layout_constraintTop_toBottomOf="@id/txt_update_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/content" />

  <LinearLayout
    android:id="@+id/lin_update_img"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/marginStandard"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/txt_update_message"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ProgressBar
      android:id="@+id/prog_update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/marginStandard" />

    <ImageView
      android:id="@+id/img_update_available"
      android:contentDescription="@string/new_version_available_title"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:padding="@dimen/marginStandard"
      android:src="@drawable/ic_system_update_accent_24dp" />

    <ImageView
      android:id="@+id/img_no_update_available"
      android:contentDescription="@string/no_update_title"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:padding="@dimen/marginStandard"
      android:src="@drawable/ic_check_24dp" />

    <ImageView
      android:id="@+id/img_update_error"
      android:contentDescription="@string/error"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:padding="@dimen/marginStandard"
      android:src="@drawable/ic_error_24px" />

    <LinearLayout
      android:id="@+id/lin_update_no_connection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="UseCompoundDrawables">

      <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginStandard"
        android:contentDescription="@string/no_connection_warning"
        android:src="@drawable/ic_signal_wifi_off_24dp" />

      <TextView
        android:layout_width="wrap_content"
        style="@style/TextAppearance.Earworm.WarningDisplay"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_connection_warning" />
    </LinearLayout>
  </LinearLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_update_dismiss"
    style="@style/Widget.Earworm.Button.Text"
    android:text="@string/dismiss"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/lin_update_img"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/gd_update_50_vert"
    android:layout_marginStart="@dimen/marginStandard"
    android:layout_marginEnd="@dimen/marginStandard" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/gd_update_50_vert"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_update_open"
    style="@style/Widget.Earworm.Button.Borderless"
    android:text="@string/download"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/lin_update_img"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="@dimen/marginStandard"
    android:layout_marginEnd="@dimen/marginStandard"
    app:layout_constraintEnd_toStartOf="@id/gd_update_50_vert"
    android:layout_marginBottom="@dimen/marginStandard" />

</androidx.constraintlayout.widget.ConstraintLayout>