<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/LightTheme.DialogTheme"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/txt_add_or_delete_title"
    style="@style/LightTheme.TextAppearance.AlertDialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:text="@string/edit_or_delete"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_add_or_delete_edit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:backgroundTint="@color/positive"
    android:text="@string/edit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txt_add_or_delete_title" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_add_or_delete_delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStandard"
    android:backgroundTint="@color/negative"
    android:text="@string/delete"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/btn_add_or_delete_edit"
    app:layout_constraintTop_toBottomOf="@id/txt_add_or_delete_title" />

</androidx.constraintlayout.widget.ConstraintLayout>