<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <androidx.cardview.widget.CardView
    style="@style/Widget.Earworm.CardView.Rounded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:foreground="?selectableItemBackground">

      <ImageView
        android:id="@+id/img_main_icon"
        android:layout_width="@dimen/mainDisplayImageIconSize"
        android:layout_height="@dimen/mainDisplayImageIconSize"
        android:src="@drawable/ic_music_note_24px"
        android:contentDescription="@string/song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/txt_main_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song_name"
        android:textAppearance="@style/TextAppearance.Earworm.ItemNameMainDisplay"
        app:layout_constraintBottom_toTopOf="@+id/txt_main_date"
        app:layout_constraintEnd_toStartOf="@id/txt_main_type"
        app:layout_constraintStart_toEndOf="@id/img_main_icon"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/txt_main_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song"
        android:textAppearance="@style/TextAppearance.Earworm.ItemTypeMainDisplay"
        app:layout_constraintBottom_toTopOf="@+id/txt_main_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/txt_main_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.Earworm.ItemContentMainDisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

      <TextView
        android:id="@+id/txt_main_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/artist"
        android:textAppearance="@style/TextAppearance.Earworm.ItemContentMainDisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt_main_date"
        app:layout_constraintStart_toEndOf="@id/img_main_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

</LinearLayout>